--- a/MockReport.Rmd
+++ b/MockReport.Rmd
@@ -1,8 +1,6 @@
 ---
 title: "Mock Report"
-output: 
-  github_document: 
-    keep_md: yes
+output: github_document
 ---
 
 ```{r setup, include=FALSE, warning = FALSE}
