--- a/MockReport.Rmd
+++ b/MockReport.Rmd
@@ -1,6 +1,8 @@
 ---
 title: "Mock Report"
-output: github_document
+output: 
+  html_document: 
+    keep_md: yes
 ---
 
 ```{r setup, include=FALSE, warning = FALSE}
